[gd_scene load_steps=25 format=3 uid="uid://du8becrhraynp"]

[ext_resource type="Script" path="res://Scripts/PlayableCharacters/hydra.gd" id="1_ssvo3"]
[ext_resource type="Texture2D" uid="uid://nrxlphynyx12" path="res://Assets/Enemy/CorruptEnemy/CorruptHydra/FreedHydraBody.png" id="2_catek"]
[ext_resource type="Texture2D" uid="uid://btdrqypmntaop" path="res://Assets/Enemy/CorruptEnemy/CorruptHydra/FreedHydraLeftHead.png" id="3_3u631"]
[ext_resource type="Texture2D" uid="uid://bfboss7vradvc" path="res://Assets/GUI/HydraGUI/HydraAttackIceCooldown.png" id="3_07lw7"]
[ext_resource type="Texture2D" uid="uid://bap1b083cw08e" path="res://Assets/PlayerSprites/AttackArrow.png" id="3_y7ek5"]
[ext_resource type="Texture2D" uid="uid://d2ik65iy3dktc" path="res://Assets/Enemy/CorruptEnemy/CorruptHydra/FreedHydraMiddleHead.png" id="4_2otqk"]
[ext_resource type="Texture2D" uid="uid://xosdynni4ght" path="res://Assets/Enemy/CorruptEnemy/CorruptHydra/FreedHydraRightHead.png" id="5_drcaf"]
[ext_resource type="Texture2D" uid="uid://be7y04leuthop" path="res://Assets/GUI/HydraGUI/HydraAttackFireCooldown.png" id="5_nyu7x"]
[ext_resource type="Texture2D" uid="uid://b7kf6ij5taaor" path="res://Assets/GUI/HydraGUI/HydraAttackPoison.png" id="7_3y01r"]
[ext_resource type="Texture2D" uid="uid://d0v86em0ftm67" path="res://Assets/GUI/HydraGUI/HydraAttackPoisonCooldown.png" id="7_uc2a0"]
[ext_resource type="Texture2D" uid="uid://bhi5emqu6mt70" path="res://Assets/GUI/HydraGUI/HydraSelect.png" id="8_aahb1"]
[ext_resource type="Texture2D" uid="uid://cehpb3gna1kee" path="res://Assets/GUI/HydraGUI/HydraAttackFire.png" id="9_5bsae"]
[ext_resource type="Texture2D" uid="uid://dmp8b5kps07sy" path="res://Assets/GUI/HydraGUI/HydraAttackIce.png" id="10_dwwka"]
[ext_resource type="PackedScene" uid="uid://cvlupvlvcx1bl" path="res://Scenes/PlayerClasses/hydraAttacks/lightning_attack.tscn" id="14_xelji"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qip2i"]
radius = 27.0
height = 54.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kopfh"]
size = Vector2(27.25, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su2ro"]
size = Vector2(20, 58)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mftj6"]
bg_color = Color(0.92, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxnd6"]
bg_color = Color(0.0166667, 1, 0, 1)

[sub_resource type="Animation" id="Animation_amb6i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/poisonAttack/attackSelect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_of7ih"]
resource_name = "leftSelect"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/poisonAttack/attackSelect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(48, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_72b36"]
resource_name = "middleSelect"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/poisonAttack/attackSelect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(24, 0)]
}

[sub_resource type="Animation" id="Animation_bpml7"]
resource_name = "rightSelect"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/poisonAttack/attackSelect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(24, 0), Vector2(48, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_45x0d"]
_data = {
"RESET": SubResource("Animation_amb6i"),
"leftSelect": SubResource("Animation_of7ih"),
"middleSelect": SubResource("Animation_72b36"),
"rightSelect": SubResource("Animation_bpml7")
}

[node name="hydra" type="CharacterBody2D" groups=["Player"]]
z_index = 2
texture_filter = 1
collision_layer = 7
collision_mask = 7
script = ExtResource("1_ssvo3")
fireDamage = 1
explosionDamage = 5
iceDamage = 6
acidDamage = 5
acidPoisonDamage = 1
poisonTick = 5
breathCooldown = 5
fireballCooldown = 2
iceCooldown = 3
iceTexture = ExtResource("10_dwwka")
iceDisabled = ExtResource("3_07lw7")
fireTexture = ExtResource("9_5bsae")
fireDisabled = ExtResource("5_nyu7x")
poisonTexture = ExtResource("7_3y01r")
poisonDisabled = ExtResource("7_uc2a0")
speed = 400.0
health = 15.0
maxHealth = 15.0
sceneKey = "Hydra"

[node name="playerSprite" type="Sprite2D" parent="."]
position = Vector2(-1, -4)
scale = Vector2(0.600001, 0.600001)
texture = ExtResource("2_catek")

[node name="leftHead" type="Sprite2D" parent="playerSprite"]
texture = ExtResource("3_3u631")

[node name="middleHead" type="Sprite2D" parent="playerSprite"]
texture = ExtResource("4_2otqk")

[node name="rightHead" type="Sprite2D" parent="playerSprite"]
texture = ExtResource("5_drcaf")

[node name="hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -4)
shape = SubResource("CapsuleShape2D_qip2i")

[node name="InteractableBox" type="Area2D" parent="."]
light_mask = 5
visibility_layer = 5
position = Vector2(-5, -3)
scale = Vector2(1.26938, 1.32)

[node name="interact_box_right" type="CollisionShape2D" parent="InteractableBox"]
position = Vector2(18.9069, 1.51515)
shape = SubResource("RectangleShape2D_kopfh")

[node name="interact_box_left" type="CollisionShape2D" parent="InteractableBox"]
position = Vector2(-10.75, 1)
shape = SubResource("RectangleShape2D_kopfh")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="attackMarker" type="Marker2D" parent="."]

[node name="hitbox" type="Area2D" parent="attackMarker"]
position = Vector2(24, 0)

[node name="attackbox" type="CollisionShape2D" parent="attackMarker/hitbox"]
visible = false
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_su2ro")

[node name="attackDirection" type="Sprite2D" parent="attackMarker"]
modulate = Color(1, 1, 1, 0.290196)
position = Vector2(36, 0)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_y7ek5")

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = -42.0
offset_right = 10.0
offset_bottom = -38.0
theme_override_styles/background = SubResource("StyleBoxFlat_mftj6")
theme_override_styles/fill = SubResource("StyleBoxFlat_jxnd6")
value = 50.0
show_percentage = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIAnimation" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_45x0d")
}

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(5, 5)
pivot_offset = Vector2(85, 120)
theme_override_constants/separation = -128

[node name="fireAttack" type="TextureRect" parent="CanvasLayer/BoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("9_5bsae")

[node name="iceAttack" type="TextureRect" parent="CanvasLayer/BoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("10_dwwka")

[node name="poisonAttack" type="TextureRect" parent="CanvasLayer/BoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("7_3y01r")

[node name="attackSelect" type="TextureRect" parent="CanvasLayer/BoxContainer/poisonAttack"]
texture_filter = 1
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("8_aahb1")

[node name="cooldownTimer" type="Timer" parent="."]

[node name="lightningAttack" parent="." instance=ExtResource("14_xelji")]

[connection signal="body_entered" from="InteractableBox" to="." method="_on_interactable_box_body_entered"]
[connection signal="body_exited" from="InteractableBox" to="." method="_on_interactable_box_body_exited"]
[connection signal="body_shape_exited" from="InteractableBox" to="." method="_on_interactable_box_body_shape_exited"]
[connection signal="body_entered" from="attackMarker/hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timer_timeout"]
